@@ -9,6 +9,7 @@ Ubercart Addresses 7.x-1.x, xxxx-xx-xx
   to the main module and renamed the used handler in the example module.
 - Issue #1860040 by MegaChriz: ensure an address instance is assigned to
   the order when an user without addresses enters checkout.
+- Issue #1866096 by MegaChriz: populate extra fields from previous orders.
 
 Ubercart Addresses 7.x-1.0-alpha1, 2012-10-11
 ------------------------------
